[package]
name = "stoch-process-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "process_lib"
path = "src/lib.rs"

[[bin]]
name = "process_bin"
path = "src/main.rs"

[dependencies]
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"